# Gendiff

./: .gitignore  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: hexlet-check.yml  pyci.yml
gendiff/: __init__.py  cli.py  diff.py  diff_generator.py  generate_diff.py  load.py  loader.py  loading.py  parsing.py  stylish.py
gendiff/formatters/: __init__.py  converting.py  json.py  plain.py  renderers.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_diff.py  test_json.py  test_yaml.py
tests/fixtures/: json_diff.json
