[tool.poetry]
name = "oleglego94-gendiff"
version = "0.1.0"
description = "Gendiff - is CLI-utility defining the difference between two files."
authors = ["Oleg Gahverdiev <olegik94b@gmail.com>"]
repository = "https://github.com/oleglego94/python-project-lvl2"
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.14.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
