[tool.poetry]
name = "oleglego94-Gendiff"
version = "0.2.0"
description = "Gendiff is a CLI-utility defining the difference between two files."
authors = ["Oleg Gahverdiev <olegik94b@gmail.com>"]
repository = "https://github.com/oleglego94/python-project-lvl2"
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
pytest = "^6.1.1"
pytest-cov = "^2.10.1"

[[tool.poetry.source]]
name = "oleglego94-Gendiff"
url = "https://test.pypi.org/legacy/"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
